@@ -1,7 +1,7 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         perlindex
-version:      1.501
+version:      1.502
 version_from: 
 installdirs:  site
 requires:
